Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-26966

The parameter innodb_force_load_corrupted makes no sense

    XMLWordPrintable

Details

    Description

      MySQL 5.5 introduced a configuration parameter innodb_force_load_corrupted whose purpose was to allow a corrupted table to be dropped.

      Given that MDEV-11412 in MariaDB 10.5.4 aims to allow any metadata for a missing or corrupted table to be dropped, and given that MDEV-17567 and MDEV-25506 and related tasks made DDL operations crash-safe, the parameter does not make any sense.

      A change that would deprecate and ignore this read-only parameter has been tested by mleich, and no problems related to that were found.

      Because this obscure parameter was read-only (not settable by a client), it seems that we could simply declare it with MARIADB_REMOVED_OPTION without breaking anything.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.